--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     </head>
     <body>
         <h1>First Heading</h1>
+        <main>
+            <p>This is a simple paragraph</p>
+        </main>
     </body>
 </html>
