modified title, h1, add fonts

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Working with Github</title>
+        <title>Learning Github</title>
         <meta charset="utf-8">
         <meta name="description" content="working with Git and github in Web Dev Capstone course">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/4.7.0/css/font-awesome.min.css">
+        <link href="main.css" rel="stylesheet">
     </head>
     <body>
-        <h1>First Heading</h1>
+        <h1><span  aria-hidden="true" data-icon="&#XE087; class="github-icon"></span>Github</h1>
         <main>
             <p>This is a simple paragraph</p>
         </main>
